
Yosys 0.12 .. Yosys 0.12-dev
--------------------------

Yosys 0.11 .. Yosys 0.12
--------------------------

 * Various
    - Added iopadmap native support for negative-polarity output enable
    - ABC update

 * SystemVerilog
    - Support parameters using struct as a wiretype
    - Fixed regression preventing the use array querying functions in case
      expressions and case item expressions

 * New commands and options
    - Added "-genlib" option to "abc" pass
    - Added "sta" very crude static timing analysis pass

 * Verific support
    - Fixed memory block size in import

 * New back-ends
    - Added support for GateMate FPGA from Cologne Chip AG

 * Intel ALM support
    - Added preliminary Arria V support


Yosys 0.10 .. Yosys 0.11
--------------------------

 * Various
    - Added $aldff and $aldffe (flip-flops with async load) cells

 * SystemVerilog
    - Fixed an issue which prevented writing directly to a memory word via a
      connection to an output port
    - Fixed an issue which prevented unbased unsized literals (e.g., `'1`) from
      filling the width of a cell input
    - Fixed an issue where connecting a slice covering the entirety of a signed
      signal to a cell input would cause a failed assertion

 * Verific support
    - Importer support for {PRIM,WIDE_OPER}_DFF
    - Importer support for PRIM_BUFIF1
    - Option to use Verific without VHDL support
    - Importer support for {PRIM,WIDE_OPER}_DLATCH{,RS}
    - Added -cfg option for getting/setting Verific runtime flags

Yosys 0.9 .. Yosys 0.10
--------------------------

 * Various
    - Added automatic gzip decompression for frontends
    - Added $_NMUX_ cell type
    - Added automatic gzip compression (based on filename extension) for backends
    - Improve attribute and parameter encoding in JSON to avoid ambiguities between
      bit vectors and strings containing [01xz]*
    - Improvements in pmgen: subpattern and recursive matches
    - Support explicit FIRRTL properties